Mobile layout bugfix

--- a/style.css
+++ b/style.css
@@ -8,8 +8,12 @@ body {
     font-family: JetbrainsMono;
     overflow-y: hidden;
     overflow-x: hidden;
-    max-width: 100%;
+    position: relative;
     max-height: 100%;
+}
+
+body, html{
+    max-width: 100%;
 }
 
 h1{
